--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Coleattick/React.git",
+  "homepage": "https://Coleattick.github.io/React/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
